--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.14.21
 
 # Mod Properties
-	mod_version = 2.3.3-1.20
+	mod_version = 2.4.3-1.20-1.20.1
 	maven_group = net.fragger
 	archives_base_name = creatoroverlays
 
