--- a/gradle.properties
+++ b/gradle.properties
@@ -4,18 +4,18 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.20.2
-yarn_mappings=1.20.2+build.4
-loader_version=0.15.7
+minecraft_version=1.21
+yarn_mappings=1.21+build.9
+loader_version=0.15.11
 
 # Mod Properties
-mod_version=3.1.0-1.20.2-1.20.4
+mod_version=3.1.0-1.21
 maven_group=net.fragger
 archives_base_name=creatoroverlays
 
 # Dependencies
-fabric_version=0.91.6+1.20.2
-replay_version=1.20.2-2.6.15
-replay_dependency=1.20.2-2.6.15
+fabric_version=0.100.6+1.21
+replay_version=1.21-2.6.17
+replay_dependency=1.21-2.6.17
 minotaur_version=2.+
-libgui_version=9.2.2+1.20.2
+libgui_version=11.0.0+1.21
