--- a/gradle.properties
+++ b/gradle.properties
@@ -4,18 +4,18 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.2
-yarn_mappings=1.21.2+build.1
-loader_version=0.16.9
+minecraft_version=1.21.5
+yarn_mappings=1.21.5+build.1
+loader_version=0.16.14
 
 # Mod Properties
-mod_version=3.1.0-1.21.2-1.21.4
+mod_version=3.1.0-1.21.5
 maven_group=net.fragger
 archives_base_name=creatoroverlays
 
 # Dependencies
-fabric_version=0.106.1+1.21.2
-replay_version=1.21.2-2.6.20
-replay_dependency=1.21.2-2.6.20
+fabric_version=0.124.2+1.21.5
+replay_version=1.21.5-2.6.22
+replay_dependency=1.21.5-2.6.22
 minotaur_version=2.+
-libgui_version=12.0.1+1.21.2
+libgui_version=13.1.0+1.21.5
